Add geoencode form

--- a/index.html
+++ b/index.html
@@ -6,15 +6,16 @@
 	<link rel="stylesheet" type="text/css" href="css/map.css">
 </head>
 <body>
-<!-- 
-	<h1>Enter your address</h1>
-	<form class="address-area">
-		<input type="text" name="address" placeholder="Address Here">
-		<input id="map-address" type="submit">
-	</form>
--->
+	<section class="enter-address">
+		<h1>Enter your address</h1>
+		<form class="address-area">
+			<input id="address-input" type="text" name="address" placeholder="Address Here">
+			<input id="map-address" type="submit">
+		</form>
+	</section>
+
 	<section class="draw-yard">
-		<h1>Draw a map around your yard.</h1>
+		<h1>Now draw a map around your yard.</h1>
 		<div id="map"></div>  
 	</section>
 	
